--- a/physics-swing-jbox2d/pom.xml
+++ b/physics-swing-jbox2d/pom.xml
@@ -2,18 +2,34 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.adarrivi</groupId>
-	<artifactId>physics-lib</artifactId>
+	<artifactId>physics-swing-jbox</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.7</jdk.version>
+		<org.adarrivi.physics.version>0.0.1-SNAPSHOT</org.adarrivi.physics.version>
+		<org.jbox2d.version>2.2.1.1</org.jbox2d.version>
 		<org.slf4j.version>1.7.5</org.slf4j.version>
 		<mockito.version>1.9.5</mockito.version>
 		<junit.version>4.11</junit.version>
 	</properties>
 
 	<dependencies>
+		<!-- Physics framework -->
+		<dependency>
+			<groupId>org.adarrivi</groupId>
+			<artifactId>physics-lib</artifactId>
+			<version>${org.adarrivi.physics.version}</version>
+		</dependency>
+
+		<!-- Physics library -->
+		<dependency>
+			<groupId>org.jbox2d</groupId>
+			<artifactId>jbox2d-library</artifactId>
+			<version>${org.jbox2d.version}</version>
+		</dependency>
+
 		<!-- Logging -->
 		<!-- Abstract login that allow us to change the underlying logging implementation -->
 		<dependency>
@@ -44,7 +60,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>physics-lib</finalName>
+		<finalName>physics-swing-jbox</finalName>
 		<plugins>
 			<!-- To get source files -->
 			<plugin>
