--- a/physics-framework/pom.xml
+++ b/physics-framework/pom.xml
@@ -11,6 +11,7 @@
 		<org.slf4j.version>1.7.5</org.slf4j.version>
 		<mockito.version>1.9.5</mockito.version>
 		<junit.version>4.11</junit.version>
+		<sonar.language>java</sonar.language>
 	</properties>
 
 	<dependencies>
@@ -80,6 +81,15 @@
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
+
+			<!-- Sonar -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+
+
 		</plugins>
 	</build>
 </project>
