--- a/physicsf-physics-jbox2d/pom.xml
+++ b/physicsf-physics-jbox2d/pom.xml
@@ -81,6 +81,14 @@
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
+
+			<!-- Sonar -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
