--- a/physicsf-physics-jbox2d/pom.xml
+++ b/physicsf-physics-jbox2d/pom.xml
@@ -10,8 +10,10 @@
 		<jdk.version>1.7</jdk.version>
 		<org.adarrivi.physics-framework.version>0.0.1-SNAPSHOT</org.adarrivi.physics-framework.version>
 		<org.jbox2d.version>2.2.1.1</org.jbox2d.version>
+		<org.slf4j.version>1.7.5</org.slf4j.version>
 		<mockito.version>1.9.5</mockito.version>
 		<junit.version>4.11</junit.version>
+		<sonar.language>java</sonar.language>
 	</properties>
 
 	<dependencies>
@@ -27,6 +29,20 @@
 			<groupId>org.jbox2d</groupId>
 			<artifactId>jbox2d-library</artifactId>
 			<version>${org.jbox2d.version}</version>
+		</dependency>
+
+		<!-- Logging -->
+		<!-- Abstract login that allow us to change the underlying logging implementation -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${org.slf4j.version}</version>
+		</dependency>
+		<!-- Using log4j implementation (this can be changed) -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${org.slf4j.version}</version>
 		</dependency>
 
 		<!-- Testing dependencies -->
